# esp_cherryusb

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
.github/workflows/: build_examples.yml  sync_esp_pkgmng.yml
additions/: esp_cherryusb.c  usb_config.h
additions/osal/: usb_osal_idf.c
examples/device/cherryusb_device_cdc/: sdkconfig.defaults
examples/device/cherryusb_device_cdc/main/: CMakeLists.txt  device_cdc.h  device_cdc_main.c  idf_component.yml
examples/device/cherryusb_device_mtp/: CMakeLists.txt  sdkconfig.defaults
examples/device/cherryusb_device_mtp/components/esp_mtp/: CMakeLists.txt  esp_mtp.c  esp_mtp_helper.c  usb_mtp.c
examples/device/cherryusb_device_mtp/components/esp_mtp/include/: esp_mtp.h  esp_mtp_def.h  esp_mtp_helper.h
examples/device/cherryusb_device_mtp/components/esp_mtp/include/private/: esp_mtp.h
examples/device/cherryusb_device_mtp/components/usb_mtp/: CMakeLists.txt  usb_mtp.c
examples/device/cherryusb_device_mtp/components/usb_mtp/include/: usb_mtp.h
examples/device/cherryusb_device_mtp/main/: CMakeLists.txt  device_mtp_main.c  sd_card_example_main.c
examples/host/cherryusb_host_hid/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/host/cherryusb_host_hid/main/: CMakeLists.txt  host_hid_main.c
test_app/test_components/: CMakeLists.txt  README.md
test_app/test_components/main/: app_main.c
